--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules
 
 
 # local env files
+.env
 .env.local
 .env.*.local
 
@@ -24,3 +25,6 @@ pnpm-debug.log*
 
 #Electron-builder output
 /dist_electron
+
+# storage files
+accounts.json
